crates/analyzer/tests/snapshots/errors__const_local.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: expression is not a constant
  ┌─ compile_errors/const_local.fe:3:33
  │
3 │         const FOO: (i32, i32) = (1, 2)
  │                                 ^^^^^^ expression is required to be constant here

error: expression is not a constant
  ┌─ compile_errors/const_local.fe:8:26
  │
8 │         const FOO: i32 = foo + 1
  │                          ^^^ expression is required to be constant here

error: overflow error
   ┌─ compile_errors/const_local.fe:14:26
   │
14 │         const FOO3: u8 = FOO1 + FOO2
   │                          ^^^^^^^^^^^ overflow occurred during constant evaluation

error: cannot find value `BAR` in this scope
   ┌─ compile_errors/const_local.fe:18:25
   │
18 │         const FOO: u8 = BAR
   │                         ^^^ undefined

error: expression is not a constant
   ┌─ compile_errors/const_local.fe:18:25
   │
18 │         const FOO: u8 = BAR
   │                         ^^^ expression is required to be constant here

error: type mismatch
   ┌─ compile_errors/const_local.fe:22:26
   │
22 │         const FOO: i32 = "FOO"
   │                          ^^^^^ this has type `String<3>`; expected type `i32`


